<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Thendral</string>
    <!--drawer-->
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <!--Login-->
    <string name="login_welcome">Welcome to Thendral</string>
    <string name="login_description">A Portal for Tamil and Tamilians around the world</string>
    <string name="login_sign_up">Sign up</string>
    <string name="login_login_button">Login into Your Account</string>
    <string name="login_create_account">Create new account</string>
    <string name="login_already_member">Already a member ?</string>
    <string name="login_sign_up_facbook">or Signup with Facebook</string>
    <!--Home Navigation-->
    <string name="navigation_home">Home</string>
    <string name="navigation_category">Category</string>
    <string name="navigation_my_topics">My Topics</string>
    <string name="navigation_audio">Thendral Audio</string>
    <string name="navigation_about_us">About us</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_sign_out">Sign Out</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Common-->
    <string name="no_network_connection">Please check your internet connection</string>
    <string name="server_not_connected">Could not connect to the server .Please try again later</string>
    <string name="server_url_changed">URL or Server has been changed.. please contact admin..</string>
    <string name="are_u_sure_want_to_logout">Are you sure want to sign out?</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >PreviousIssue</item>
        <item >Category</item>
        <item >My Topics</item>
        <item >Thendral Audio</item>
        <item >About us</item>
        <item >Settings</item>
        <item >Sign out</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/selector_current_issue</item>
        <item>@drawable/selector_current_issue</item>
        <item>@drawable/selector_category</item>
        <item>@drawable/selector_my_topics</item>
        <item>@drawable/selector_audio</item>
        <item>@drawable/selector_aboutus</item>
        <item>@drawable/selector_settings</item>
        <item>@drawable/signout_selector</item>
    </array>
    
    <!--Classifieds-->
    <string name="wanted_brides">Wanted - Brides</string>
    <string name="wanted_grooms">Wanted - Grooms</string>
    <string name="for_rent">For Rent</string>
    <string name="chennai_real_estate">Chennai Real Estate</string>
    <string name="service_apartment">Service Apartment</string>
    <string name="Ipbs">Ipbs</string>

    <string name="category_item_1">தென்றல் பேசுகிறது</string>
    <string name="category_item_2">எழுத்தாளர்</string>
    <string name="category_item_3">நேர்காணல்</string>
    <string name="category_item_4">சிறப்புப் பார்வை</string>
    <string name="category_item_5">சாதனையாளர்</string>
    <string name="category_item_6">மாயாபஜார்</string>
    <string name="category_item_7">அன்புள்ள சிநேகிதியே</string>
    <string name="category_item_8">முன்னோடி</string>
    <string name="category_item_9"></string>
    <string name="category_item_10"></string>
    <string name="category_item_11"></string>
    <string name="category_item_12"></string>
    <string name="category_item_13"></string>
    <string name="events_other">மற்றவை</string>
    <string name="events_announcement">அறிவிப்புகள்</string>
    <string name="events_happened">நடந்தவை</string>
    <string name="tamil_author_name">ஜோதிர்லதா கிரிஜா</string>
    <string name="tamil_font">முற்போக்குச் சிந்தனை கொண்ட பெண் எழுத்தாளர்களில் முக்கியமானவர் ஜோதிர்லதா கிரிஜா. இவர் திண்டுக்கல்லை அடுத்துள்ள வத்தலகுண்டில் 1935ம் ஆண்டு பிறந்தார்</string>
    <string name="title_activity_details">DetailsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_thendral_login">ThendralLoginActivity</string>
    <string name="need_an_account">NEED AN ACCOUNT?</string>
    <string name="sign_up_now">Sign Up Now</string>

    <string name="no_internet_connection">No Internet Connection</string>
    <string name="title_activity_category_details_page">CategoryDetailsPage</string>
</resources>
