<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splash"
    tools:context="com.kaaylabs.thendral.LoginActivity"
    android:fillViewport="false"
    android:id="@+id/rootLoginLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="@dimen/login_image_logo"
                android:layout_height="@dimen/login_image_logo"

                android:id="@+id/logoImageView"
                android:background="@drawable/ic_thendral_logo"
                android:layout_above="@+id/linearLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="53dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout2"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/login_welcome"
                    android:id="@+id/welcomeTextView"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/login_description"
                    android:id="@+id/descriptionTextView"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_below="@+id/welcomeTextView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/login_description_top" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:weightSum="1.0"
                    android:id="@+id/loginButtonsLayout">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="0.5"
                        android:layout_margin="10dp"
                        android:text="@string/login_sign_up"
                        android:background="@color/login_button_color"
                        android:textAllCaps="false"
                        android:id="@+id/signUpButton" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="0.5"
                        android:padding="10dp"
                        android:layout_margin="10dp"
                        android:background="@color/login_button_color"
                        android:textAllCaps="false"
                        android:text="@string/login_login_button"
                        android:textColor="@color/white"
                        android:id="@+id/loginButton" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/loginButtonsLayout"
                    android:weightSum="1.0"
                    android:id="@+id/loginTextLayout"
                    android:layout_alignLeft="@+id/loginButtonsLayout"
                    android:layout_alignStart="@+id/loginButtonsLayout"
                    android:layout_alignRight="@+id/loginButtonsLayout"
                    android:layout_alignEnd="@+id/loginButtonsLayout">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_marginLeft="10dp"
                        android:textSize="12sp"
                        android:text="@string/login_create_account"
                        android:textAllCaps="false" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:layout_marginLeft="10dp"
                        android:gravity="left"
                        android:textSize="12sp"
                        android:text="@string/login_already_member"
                        android:textAllCaps="false" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/signup_face_book_text_height"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/login_sign_up_facbook"
                    android:id="@+id/signUpFacebookButton"
                    android:textAllCaps="false"
                    android:gravity="center"

                    android:layout_centerHorizontal="true" />
            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>


</RelativeLayout>
